fix overflow of popups

--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,7 @@ button:hover {
 }
 
 #editor {
-    overflow: hidden;
+    overflow: visible;
 }
 
 #output-container {
